[add] making a grid complete

--- a/as.html
+++ b/as.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>A Star Algo</h1>
-    <canvas id="myCanvas" width="400" height="200" style="border:1px solid #000000;"></canvas> 
+    <canvas id="CanvasAS" width="400" height="200" style="border:1px solid #000000;"></canvas> 
     <script src="AS.js"></script>
 </body>
 </html>
