--- a/as.html
+++ b/as.html
@@ -9,6 +9,7 @@
 <body>
     <h1>A Star Algo</h1>
     <canvas id="CanvasAS" width="400" height="200" style="border:1px solid #000000;" onclick="colorSelectedSquareOnClick(event)"></canvas> 
+    <p>The distance between the Last Point and Current Point is : <span id="dist"></span></p>
     <script src="AS.js"></script>
 </body>
 </html>
