[fix] fixed the two pixel on the right and bottom border, refactored the code of colorSquare

--- a/as.html
+++ b/as.html
@@ -9,6 +9,8 @@
 <body>
     <h1>A Star Algo</h1>
     <canvas id="CanvasAS" width="400" height="200" style="border:1px solid #000000;" onclick="colorSelectedSquareOnClick(event)"></canvas> 
+    <p>Last Point position is <span id="lastPoint"></span></p>
+    <p>Current Point position is <span id="currentPoint"></span></p>
     <p>The distance between the Last Point and Current Point is : <span id="dist"></span></p>
     <script src="AS.js"></script>
 </body>
