[add] adding surface type

--- a/as.html
+++ b/as.html
@@ -12,6 +12,9 @@
     <p>Last Point position is <span id="lastPoint"></span></p>
     <p>Current Point position is <span id="currentPoint"></span></p>
     <p>The distance between the Last Point and Current Point is : <span id="dist"></span></p>
+    <button onclick="changeSurface('normal')">Normal</button>
+    <button onclick="changeSurface('water')">Water</button>
+    <button onclick="changeSurface('obstacle')">Obstacle</button>
     <script src="AS.js"></script>
 </body>
 </html>
