[fix] the obstacle and water behave the right way now

--- a/as.html
+++ b/as.html
@@ -15,6 +15,7 @@
     <button onclick="changeSurface('normal')">Normal</button>
     <button onclick="changeSurface('water')">Water</button>
     <button onclick="changeSurface('obstacle')">Obstacle</button>
+    <button onclick="changeSurface('clear')">Clear</button>
     <script src="AS.js"></script>
 </body>
 </html>
